csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_CreateConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_HingeConstraint* JPH_HingeConstraintSettings_CreateConstraint(JPH_HingeConstraintSettings* settings, JPH_Body* body1, JPH_Body* body2);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_HingeConstraintSettings* JPH_HingeConstraint_GetSettings(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetCurrentAngle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetCurrentAngle(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetMaxFrictionTorque", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetMaxFrictionTorque(JPH_HingeConstraint* constraint, float frictionTorque);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetMaxFrictionTorque", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetMaxFrictionTorque(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetMotorSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetMotorSettings(JPH_HingeConstraint* constraint, JPH_MotorSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetMotorSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_GetMotorSettings(JPH_HingeConstraint* constraint, JPH_MotorSettings* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetMotorState", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetMotorState(JPH_HingeConstraint* constraint, uint state);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetMotorState", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_HingeConstraint_GetMotorState(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetTargetAngularVelocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetTargetAngularVelocity(JPH_HingeConstraint* constraint, float angularVelocity);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetTargetAngularVelocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetTargetAngularVelocity(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetTargetAngle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetTargetAngle(JPH_HingeConstraint* constraint, float angle);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetTargetAngle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetTargetAngle(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetLimits", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetLimits(JPH_HingeConstraint* constraint, float inLimitsMin, float inLimitsMax);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetLimitsMin", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetLimitsMin(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetLimitsMax", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetLimitsMax(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_HasLimits", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_HingeConstraint_HasLimits(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetLimitsSpringSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_GetLimitsSpringSettings(JPH_HingeConstraint* constraint, JPH_SpringSettings* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_SetLimitsSpringSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_SetLimitsSpringSettings(JPH_HingeConstraint* constraint, JPH_SpringSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetTotalLambdaPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_GetTotalLambdaPosition(JPH_HingeConstraint* constraint, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetTotalLambdaRotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraint_GetTotalLambdaRotation(JPH_HingeConstraint* constraint, float* x, float* y);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetTotalLambdaRotationLimits", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetTotalLambdaRotationLimits(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraint_GetTotalLambdaMotor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HingeConstraint_GetTotalLambdaMotor(JPH_HingeConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SliderConstraintSettings* JPH_SliderConstraintSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetSliderAxis", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetSliderAxis(JPH_SliderConstraintSettings* settings, JPH_Vec3* axis);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetAutoDetectPoint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_SliderConstraintSettings_GetAutoDetectPoint(JPH_SliderConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetAutoDetectPoint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetAutoDetectPoint(JPH_SliderConstraintSettings* settings, [MarshalAs(UnmanagedType.U1)] bool value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_GetPoint1(JPH_SliderConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetPoint1(JPH_SliderConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_GetPoint2(JPH_SliderConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetPoint2(JPH_SliderConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetSliderAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetSliderAxis1(JPH_SliderConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetSliderAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_GetSliderAxis1(JPH_SliderConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetNormalAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetNormalAxis1(JPH_SliderConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetNormalAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_GetNormalAxis1(JPH_SliderConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetSliderAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetSliderAxis2(JPH_SliderConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetSliderAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_GetSliderAxis2(JPH_SliderConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_SetNormalAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_SetNormalAxis2(JPH_SliderConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_GetNormalAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SliderConstraintSettings_GetNormalAxis2(JPH_SliderConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraintSettings_CreateConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SliderConstraint* JPH_SliderConstraintSettings_CreateConstraint(JPH_SliderConstraintSettings* settings, JPH_Body* body1, JPH_Body* body2);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraint_GetSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SliderConstraintSettings* JPH_SliderConstraint_GetSettings(JPH_SliderConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_SliderConstraint_GetCurrentPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_SliderConstraint_GetCurrentPosition(JPH_SliderConstraint* constraint);
